# geomod

./: .gitignore  README.md
geomod/: Cargo.toml
geomod/src/: gline.rs  gobject.rs  gpoint.rs  gtri.rs  lib.rs  main.rs
geomod_demo/: Cargo.toml
geomod_demo/shaders/: basic.fs  basic.gs  basic.vs
geomod_demo/shaders/grid/: grid.fs
geomod_demo/shaders/tool/: tool.fs  tool.vs
geomod_demo/src/: main.rs
geomod_demo/src/renderer/: buffer.rs  mod.rs  program.rs  renderer.rs  shader.rs  texture.rs  vertex_array.rs
win32_demo/: Cargo.toml
win32_demo/src/: main.rs
